--- a/src/Footer.css
+++ b/src/Footer.css
@@ -24,5 +24,16 @@
 }
 
 .footer__right {
-    flex: 0.3;
+    flex: 0.3; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+.footer__albumLogo {
+    height: 60px;
+    width: 60px;
+    margin-left: 20px;
+    object-fit: contain;
 }
