--- a/src/Footer.css
+++ b/src/Footer.css
@@ -11,6 +11,10 @@
 
 .footer__left {
     flex: 0.3;
+    display: flex;
+    align-items: center;
+    color: white;
+    width: 300px;
 }
 
 .footer__center {
@@ -31,9 +35,31 @@
     color: white;
 }
 
+.footer__right * .MuiSlider-root {
+    color: green;
+}
+
 .footer__albumLogo {
     height: 60px;
     width: 60px;
     margin-left: 20px;
     object-fit: contain;
+}
+
+.footer__icon:hover,
+.footer__green:hover {
+    transition: transform 0.2s ease-in-out;
+    transform: scale(1.2) !important;
+}
+
+.footer__green {
+    color: #1ed15e;
+}
+
+.footer__songInfo > h4 {
+    margin-bottom: 5px;
+}
+
+.footer__songInfo > p {
+    font-size: 12px;
 }
